Chat start right now

--- a/myschool/ionic.project
+++ b/myschool/ionic.project
@@ -4,7 +4,7 @@
   "proxies": [
     {
       "path": "/api",
-      "proxyUrl": "http://192.168.1.2:9000/api"
+      "proxyUrl": "http://localhost:9000/api"
     }
   ],
   "gulpStartupTasks": [
