--- a/greenEd/ionic.project
+++ b/greenEd/ionic.project
@@ -1,19 +1,4 @@
 {
   "name": "greenEd",
-  "app_id": "",
-  "browsers": [
-    {
-      "platform": "android",
-      "browser": "crosswalk",
-      "version": "12.41.296.5"
-    }
-  ],
-  "gulpStartupTasks": [
-    "sass",
-    "watch"
-  ],
-  "watchPatterns": [
-    "www/**/*",
-    "!www/lib/**/*"
-  ]
+  "app_id": ""
 }
