--- a/greenEd/package.json
+++ b/greenEd/package.json
@@ -11,7 +11,6 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
-    "gulp-eslint": "^1.0.0",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
@@ -21,9 +20,13 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "com.ionic.keyboard",
-    "cordova-plugin-camera"
+    "cordova-plugin-camera",
+    {
+      "locator": "https://github.com/litehelpers/Cordova-sqlite-storage.git",
+      "id": "io.litehelpers.cordova.sqlite"
+    }
   ],
   "cordovaPlatforms": [
-    "android"
+    "ios"
   ]
 }
