--- a/greenEdBackend/bower.json
+++ b/greenEdBackend/bower.json
@@ -10,7 +10,8 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-csv-import-tmp": "angular-csv-import#~0.0.26"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
