--- a/qcityguide/ionic.project
+++ b/qcityguide/ionic.project
@@ -1,4 +1,12 @@
 {
   "name": "qcityguide",
-  "app_id": ""
+  "app_id": "",
+  "gulpStartupTasks": [
+    "sass",
+    "watch"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*"
+  ]
 }
